--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+   
+        <h1>input details</h1>
+        <form id="userForm">
+          <label> name: <input type="text" name="name" autocomplete="name"  id="Name" /></label><br />
+          <label> email: <input type="email" name="email" autocomplete ="email" id="email"/></label><br />
+          <input type="submit" id="submit" value="Submit" />
+        </form>
+    
     <script src="index.js"></script>
   </body>
 
